2010-09-08  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Carlson.

        [GStreamer] cache media duration in READY instead of PLAYING
        https://bugs.webkit.org/show_bug.cgi?id=39053

        New cacheDuration private method used to in updateStates() and
        durationChanged().

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivateGStreamer::updateStates):
        (WebCore::MediaPlayerPrivateGStreamer::cacheDuration):
        (WebCore::MediaPlayerPrivateGStreamer::durationChanged):
        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/57740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66987 268f45cc-cd09-0410-ab3c-d52691b4dbfc